# ananas

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt
chesslib/: CMakeLists.txt
chesslib/include/: chess.hpp  game.hpp
chesslib/include/chesslib/: game.hpp  move.hpp  piece.hpp  search.hpp  square.hpp
chesslib/src/: chess.cpp  game.cpp  move.cpp  search.cpp
seblib/: CMakeLists.txt
seblib/include/seblib/: enum.hpp
test/: CMakeLists.txt
test/src/: chess.cpp  game.cpp  search.cpp  square.cpp
